# My-projects

Personal_Finance_Manager/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  server.c  server.h  server_main.c  transactions.c  transactions.h  transactionswindow.cpp  transactionswindow.h
SPbPU/Coffee/: Coffee.css  Coffee.html
